[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "strava-gear"
description = "Rule based tracker of gear and component wear primarily for Strava"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = {text = "MIT"}
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/liskin/strava-gear"}
requires-python = "~= 3.8"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "importlib-metadata; python_version<'3.10'",
    "jsonschema",
    "platformdirs >= 2.1",
    "python-dateutil >= 2.7",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "build >= 0.7",
    "cram",
    "flake8 >= 3.7",
    "isort >= 5.0",
    "mypy >= 0.900",
    "twine",
    "types-PyYAML",
    "types-python-dateutil",
    "types-tabulate",
]
test = [
    "pytest",
]
strava = [
    "strava-offline ~= 1.0",
]

[project.scripts]
strava-gear = "strava_gear.cli:cli"
strava-gear-sync = "strava_gear.cli_strava_offline:cli_sqlite [strava]"

[tool.gha-check-distro]
dependencies-apt = [
    "python3-bottle",
    "python3-build",
    "python3-click",
    "python3-click-option-group",
    "python3-configobj",
    "python3-cram",
    "python3-dateutil",
    "python3-flake8",
    "python3-importlib-metadata",
    "python3-isort",
    "python3-jsonschema",
    "python3-mypy",
    "python3-pep517",
    "python3-pip",
    "python3-pip-whl",
    "python3-platformdirs",
    "python3-pytest",
    "python3-requests-oauthlib",
    "python3-tabulate",
    "python3-typeshed",
    "python3-typing-extensions",
    "python3-venv",
    "python3-yaml",
    "twine",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
