[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "strava-gear"
description = "Rule based tracker of gear and component wear primarily for Strava"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = "MIT"
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">= 3.10"
dependencies = [
    "PyYAML",
    "click ~= 8.0",
    "jsonschema",
    "platformdirs >= 2.1",
    "python-dateutil >= 2.7",
    "tabulate",
]

[project.optional-dependencies]
strava = [
    "strava-offline ~= 1.0",
]

[dependency-groups]
dev = [
    "flake8 >= 3.7",
    "isort >= 5.0",
    "mypy >= 0.900",
    "prysk >= 0.20.0",
    "pytest",
    "types-PyYAML",
    "types-python-dateutil",
    "types-tabulate",
]

[project.urls]
"Homepage" = "https://github.com/liskin/strava-gear"
"Release Notes" = "https://github.com/liskin/strava-gear/releases"
"Issues" = "https://github.com/liskin/strava-gear/issues"
"CI" = "https://github.com/liskin/strava-gear/actions"
"Donations (GitHub)" = "https://github.com/sponsors/liskin"
"Donations (PayPal)" = "https://www.paypal.me/lisknisi/10EUR"

[project.scripts]
strava-gear = "strava_gear.cli:cli"
strava-gear-sync = "strava_gear.cli_strava_offline:cli_sqlite [strava]"

[tool.gha-check-distro]
dependencies-apt = [
    "jq",
    "make",
    "python3-bottle",
    "python3-click",
    "python3-click-option-group",
    "python3-configobj",
    "python3-dateutil",
    "python3-flake8",
    "python3-isort",
    "python3-jsonschema",
    "python3-mypy",
    "python3-pep517",
    "python3-pip",
    "python3-platformdirs",
    "python3-pytest",
    "python3-requests-oauthlib",
    "python3-tabulate",
    "python3-typeshed",
    "python3-typing-extensions",
    "python3-venv",
    "python3-yaml",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
