[metadata]
name = strava-gear
url = https://github.com/liskin/strava-gear

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Rule based tracker of gear and component wear primarily for Strava"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = ~= 3.7
install_requires =
    PyYAML
    click ~= 8.0
    jsonschema
    platformdirs >= 2.1
    python-dateutil >= 2.7
    tabulate
tests_require =

[options.extras_require]
dev =
    build >= 0.7
    cram
    flake8 >= 3.7
    isort >= 5.0
    mypy >= 0.730
    twine
    types-PyYAML
    types-python-dateutil
    types-setuptools
    types-tabulate
test =
    pytest
strava =
    strava-offline ~= 1.0

[options.packages.find]
where=src

[options.package_data]
* =
    py.typed

[options.entry_points]
console_scripts =
    strava-gear = strava_gear.cli:main
    strava-gear-sync = strava_gear.cli_strava_offline:cli_sqlite [strava]

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120

# vim:set et:
