name:                strava-gear
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/liskin/strava-gear#readme
license:             BSD3
license-file:        LICENSE
author:              Tomáš Janoušek
maintainer:          tomi@nomi.cz
copyright:           2015 Tomáš Janoušek
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/liskin/strava-gear

executable strava-gear-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config, Strava
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , transformers
                     , text
                     , time
                     , split
                     , strive
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , esqueleto
                     , tabular
  default-language:    Haskell2010
